Add support for DNI 3048UP
1.modify busybox config 'CONFIG_SYS_EEPROM_SIZE=256' to 2048
2.remove unused file
3.add definition 'SWITCH_ASIC_VENDOR' to machine.make
4.remove the case '#if 0' in board_bu.c
5.modify difinition 'CONFIG_ENV_OFFSET' to 0x100000 in nvramstubs.c
6.remove the case '#if 0' in iproc_mdio.c
7.modify onie binaries format to uboot_ubootenv-up
8.modify difinition 'uboot_machine' to DNI_3048UP
9.modify difinition 'UBOOT_MACHINE' to dni_3048up
10.modify difinition 'uimage_max_size=$(( 14912 * 1024 ))' to fit mtd partition
11.modify difinition 'uboot_max_size=$(( 1 * 1024 * 1024 ))' to fit mtd partition
12.add u-boot ARM related changes in patch files.
		feature-fdt-environment-size.patch
		feature-populate-serial-number.patch
		feature-save-default-env-on-bad-crc.patch
		feature-sys-eeprom-tlv.patch

--- a/machine/dni/dni_3048up/INSTALL
+++ b/machine/dni/dni_3048up/INSTALL
@@ -46,12 +46,12 @@ Step 2 -- Install ONIE kernel (dni_3048up-r1.u-boot dni_3048up-r1.itb)
 
 Copying the image down using TFTP and flash to the SPI flash::
 
-  =>tftp $loadaddr dni_3048up-r1.u-boot
+  =>tftp $loadaddr onie-dni_3048up-r1.bin.uboot+env
   =>sf probe 0;
-  =>sf erase 0 0x100000;
-  =>sf write $loadaddr 0 $filesize;
+  =>sf erase 0 0x120000;
+  =>sf write $loadaddr 0 0x120000;
   
-  =>tftp $loadaddr dni_3048up-r1.itb
+  =>tftp $loadaddr onie-dni_3048up-r1.bin
   =>sf probe 0;
   =>sf erase 0x170000 0xe90000;
   =>sf write $loadaddr 0x170000 $filesize;
