Modify machine dni_3048up install description file

--- a/machine/dni/dni_3048up/INSTALL
+++ b/machine/dni/dni_3048up/INSTALL
@@ -17,7 +17,8 @@ For example::
 When complete, the ONIE binaries are located in
 ``build/images``::
 
-  -rw-r--r-- 3604480 May  7 11:38 onie-dni_3048up-r1.bin
+  -rw-rw-r-- 4966536 Jun  2 14:23 onie-dni_3048up-r1.bin
+  -rw-rw-r-- 892052 Jun  2 14:23 onie-dni_3048up-r1.bin.uboot+env
 
 Cross-Compiling the DEMO OS
 ===========================
@@ -41,7 +42,7 @@ Step 1 -- Put the ONIE files on a TFTP server
 The following directions assume the files are on the root of the TFTP
 server.
 
-Step 2 -- Install ONIE kernel (dni_3048up-r1.u-boot dni_3048up-r1.itb)
+Step 2 -- Install ONIE kernel (onie-dni_3048up-r1.bin.uboot+env onie-dni_3048up-r1.bin)
 -----------------------------------------------
 
 Copying the image down using TFTP and flash to the SPI flash::
