--- a/machine/imt/im_n29xx_t40n/INSTALL
+++ b/machine/imt/im_n29xx_t40n/INSTALL
@@ -21,31 +21,127 @@ When complete, the ONIE binaries are located in
 -rw-rw-r-- 1 20381696 Jan 28 14:30 onie-recovery-x86_64-im_n29xx_t40n-r0.iso
 -rw-rw-r-- 1 8910711  Jan 28 14:30 onie-updater-x86_64-im_n29xx_t40n-r0
 
-Note on ONIE id for Interface Masters Niagara 29XX Series
+im_n29xx_t40n-r0.initrd -- This is the ONIE initramfs (filesystem).
+
+im_n29xx_t40n-r0.vmlinuz -- This is the ONIE kernel image.
+
+onie-recovery-x86_64-im_n29xx_t40n-r0.iso -- This is the ONIE recovery
+ISO image. This image can be used to create a bootable USB memory stick
+for installing/recovery ONIE.
+
+onie-updater-x86_64-im_n29xx_t40n-r0 -- This is the ONIE self-update
+image. This image is a self-extracting archive used for installing ONIE.
+
+
+Note on ONIE id for Interface Masters Niagara 2XXX Series
 =========================================================
 
 ONIE machine id 'im_n29xx_t40n' historically includes part for
 Congatec conga-BAF/T40N CPU board. This is left intentionally to
 support backward compatibility with older ONIE versions.
 Now machine id 'im_n29xx_t40n' is used on Interface Masters Niagara
-29xx family devices. More detailed list for supported hardware you
+2xxx family devices. More detailed list for supported hardware you
 can find below.
 
-Interface Masters Niagara 29XX Series Supported Hardware
+
+Interface Masters Niagara 2XXX Series Supported Hardware
 ========================================================
 
-Device               Ports              CPU             Forwarding                     Modular I/O configurations
-==================   ================   =============   ============================   =========================
-Niagara 2948X12XLm   48x10G  + 12x40G   Intel/AMD x86   Broadcom BCM56850 (Trident2)   Yes
-Niagara 2960X6XLm    60x10G  + 6x40G    Intel/AMD x86   Broadcom BCM56850 (Trident2)   Yes
-Niagara 2972Xm       72x10G             Intel/AMD x86   Broadcom BCM56850 (Trident2)   Yes
-Niagara 2932XL       32x40G             Intel/AMD x86   Broadcom BCM56850 (Trident2)   No
-Niagara 2948X6XL     48x10G  + 6x40G    Intel/AMD x86   Broadcom BCM56850 (Trident2)   No
+Broadcom XGS silicon family based:
+
+Device               Ports               CPU             Forwarding                      Modular I/O configurations
+==================   =================   =============   =============================   =========================
+Niagara 2948X12XLm   48x10G  +  12x40G   Intel/AMD x86   Broadcom BCM56850  (Trident2)   Yes
+Niagara 2960X6XLm    60x10G  +   6x40G   Intel/AMD x86   Broadcom BCM56850  (Trident2)   Yes
+Niagara 2972Xm       72x10G              Intel/AMD x86   Broadcom BCM56850  (Trident2)   Yes
+Niagara 2932XL       32x40G              Intel/AMD x86   Broadcom BCM56850  (Trident2)   No
+Niagara 2948X6XL     48x10G  +   6x40G   Intel/AMD x86   Broadcom BCM56850  (Trident2)   No
+Niagara 28XX                       XXX   Intel/AMD x86   Broadcom BCM56860 (Trident2+)   Yes
+Niagara 2532          2x10G  + 32x100G   Intel/AMD x86   Broadcom BCM56960  (Tomahawk)   No
+
+Broadcom DNX silicon family based:
+
+Device               Ports               CPU             Forwarding                      Modular I/O configurations
+==================   =================   =============   =============================   =========================
+Niagara 2648X-4C     48x10G  +  4x100G   Intel/AMD x86   Broadcom BCM88375  (QumranMX)   No
+
 
 Installing the ONIE binaries
 ============================
 
-Installation on blank machine is performed through PXE (Preboot Execution Environment).
+Installation is possible through 2 different methods:
+1. Installation using bootable USB stick on platforms that have USB port.
+2. Installation using PXE (Preboot Execution Environment) on all platforms.
+
+
+Installation through USB bootable stick.
+----------------------------------------
+
+Use ``dd`` to copy the .iso image to a USB stick and boot from that::
+
+  dd if=onie-recovery-x86_64-im_n29xx_t40n-r0.iso.iso of=/dev/sdX bs=10M
+
+You can find the correct ``/dev/sdX`` by inspecting the ``dmesg`` 
+output or ``fdisk -l`` command after inserting the USB stick into your work station.
+
+Booting from USB stick
+----------------------
+
+To enable booting from USB in the BIOS:
+1. Insert the USB stick
+2. Power on the switch and enter the BIOS configuration
+3. Set the hard drive boot order:
+
+  In "Boot Option #1" select the device that corresponds to your
+  device::
+
+    Boot-->Boot Option Priorities-->Boot Option #1
+
+  If the device name is not listed in "Boot Option #1", please
+  check the priorities in the hard drive boot order::
+
+    Boot-->Hard Drive BBS Priorities-->Boot Option #1
+
+  Taking ``UFD 2.0 Silicon-Power 16GB`` as an example, the boot
+  order will look like following::
+
+    Device Based Boot Priority
+    Boot Option #1          [UFD 2.0 Silicon-Po...]
+    Boot Option #2          [P0: SanDisk SD8SFA...]
+    Boot Option #3          [Realtek Boot Agent]
+
+4. Save and Exit the BIOS configuration
+5. After several seconds, you should see:
+
+                     GNU GRUB  version 2.02~beta2+e4a1fe391
+
+ +----------------------------------------------------------------------------+
+ |*ONIE: Rescue                                                               |
+ | ONIE: Embed ONIE                                                           |
+ |                                                                            |
+ |                                                                            |
+ |                                                                            |
+ |                                                                            |
+ |                                                                            |
+ |                                                                            |
+ |                                                                            |
+ |                                                                            |
+ |                                                                            |
+ |                                                                            |
+ +----------------------------------------------------------------------------+
+
+      Use the ^ and v keys to select which entry is highlighted.
+      Press enter to boot the selected OS, `e' to edit the commands
+      before booting or `c' for a command-line.
+
+  - Choose ``ONIE: Embed ONIE`` for creating a fresh partition layout and
+    installing ONIE automatically.  All data on the mass storage will be
+    erased.
+  - Choose ``ONIE: Rescue`` for entering ONIE recovery command-line shell.
+
+
+Installation through PXE (Preboot Execution Environment).
+---------------------------------------------------------
 
 For that you need to set network boot and related options in Niagara Switch BIOS:
 
