--- a/machine/netberg/netberg_rangeley_p1330/INSTALL
+++ b/machine/netberg/netberg_rangeley_p1330/INSTALL
@@ -1,10 +1,10 @@
-Add support for Netberg Common Rangeley CPU board
+Add support for Netberg Rangeley P1330 CPU board
 
 ================================================================================
-  Netberg Common Rangeley CPU board
+  Netberg Rangeley P1330 CPU board
 ================================================================================
 
-  Ingrasys switch which supports modularized CPU board design, have a
+  Netberg switch which supports modularized CPU board design, have a
 non-Netberg H/W component for mother board detection. For motherboard
 detection, please refer to ``busybox/miscutils/mb_detect.c``
 
@@ -18,7 +18,7 @@ detection, please refer to ``busybox/miscutils/mb_detect.c``
 
   Specification
 ===============
- - Modularized CPU board design
+ - Modularized CPU board design (Intel Rangeley Processor C2558)
  - 1 RJ-45 out-of-band management port (10/100/1000M)
  - 1 console port (RJ-45 on Aurora 720, Mini-USB on Aurora 620)
  - 1 8GB DDR3 SDRAM
@@ -26,51 +26,51 @@ detection, please refer to ``busybox/miscutils/mb_detect.c``
  - 1 USB 2.0 port
 
 ===================================================
-Installing ONIE on Netberg Common Rangeley CPU board
+Installing ONIE on Netberg Rangeley P1330 CPU board
 ===================================================
 
 Cross-Compiling ONIE
 ====================
 
 To compile ONIE first change directories to ``build-config`` and then
-type ``"make MACHINEROOT=../machine/netberg/ MACHINE=netberg_common_rangeley all"``.  For example::
+type ``"make MACHINEROOT=../machine/netberg/ MACHINE=netberg_rangeley_p1330 all"``.  For example::
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/netberg/ MACHINE=netberg_common_rangeley all
+  $ make -j4 MACHINEROOT=../machine/netberg/ MACHINE=netberg_rangeley_p1330 all
 
-Or, change directories to ``machine/netberg/netberg_common_rangeley`` to compile ONIE,
+Or, change directories to ``machine/netberg/netberg_rangeley_p1330`` to compile ONIE,
 use ``build.sh`` to compile ONIE. For example:
 
-  $ cd machine/netberg/netberg_common_rangeley
+  $ cd machine/netberg/netberg_rangeley_p1330
   $ ./build.sh all
 
 When complete, the ONIE binaries are located in
 ``build/images``:
 
--rw-rw-r-- 1 user user  6027904 May 25 23:41 netberg_common_rangeley-r0.initrd
--rw-rw-r-- 1 user user  3465552 May 25 06:55 netberg_common_rangeley-r0.vmlinuz
--rw-rw-r-- 1 user user 21626880 May 26 00:04 onie-recovery-x86_64-netberg_common_rangeley-r0.iso
--rw-rw-r-- 1 user user  9535351 May 26 00:03 onie-updater-x86_64-netberg_common_rangeley-r0
+-rw-rw-r-- 1 user user  6026032 Jun  5 00:36 netberg_rangeley_p1330-r0.initrd
+-rw-rw-r-- 1 user user  3464784 Jun  5 00:20 netberg_rangeley_p1330-r0.vmlinuz
+-rw-rw-r-- 1 user user 21626880 Jun  5 00:24 onie-recovery-x86_64-netberg_rangeley_p1330-r0.iso
+-rw-rw-r-- 1 user user  9535351 Jun  5 00:23 onie-updater-x86_64-netberg_rangeley_p1330-r0
 
 Cross-Compiling the DEMO OS
 ===========================
 
 To compile the demo OS first change directories to ``build-config``
-and then type ``"make MACHINE=netberg_common_rangeley demo"``.  For example::
+and then type ``"make MACHINE=netberg_rangeley_p1330 demo"``.  For example::
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/netberg/ MACHINE=netberg_common_rangeley demo
+  $ make -j4 MACHINEROOT=../machine/netberg/ MACHINE=netberg_rangeley_p1330 demo
 
-Or, change directories to ``machine/netberg/netberg_common_rangeley`` to compile ONIE,
+Or, change directories to ``machine/netberg/netberg_rangeley_p1330`` to compile ONIE,
 use ``build.sh`` to compile ONIE. For example:
 
-  $ cd machine/netberg/netberg_common_rangeley
+  $ cd machine/netberg/netberg_rangeley_p1330
   $ ./build.sh demo
 
 When complete, the demo OS installer is located in ``build/images``::
 
--rw-rw-r-- 1 user user  9514248 May 25 23:41 demo-diag-installer-x86_64-netberg_common_rangeley-r0.bin
--rw-rw-r-- 1 user user  9514248 May 25 23:41 demo-installer-x86_64-netberg_common_rangeley-r0.bin
+-rw-rw-r-- 1 user user  9514248 Jun  5 00:36 demo-diag-installer-x86_64-netberg_rangeley_p1330-r0.bin
+-rw-rw-r-- 1 user user  9514248 Jun  5 00:36 demo-installer-x86_64-netberg_rangeley_p1330-r0.bin
 
 Installing ONIE on a Blank Machine
 ==================================
@@ -108,7 +108,7 @@ To enable booting from USB in the AMI-BIOS:
 
 1. Insert the USB stick
 
-2. Power on the Netberg Rangeley CPU board Switch
+2. Power on the Netberg Aurora Switch
 
 3. While seeing ``Press <DEL> or <ESC> to enter setup.``, press ESC to interrupt
   You shall see:
