Update the documentation build README
Document how to use the DOCBUILDDIR Makefile variable.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/README
+++ b/README
@@ -16,10 +16,10 @@ system::
 Building Documentation
 ======================
 
-Do the following to build the documentation::
+To build the documentation do the following::
 
   $ cd onie
-  $ make docs
+  $ make docs DOCBUILDDIR=<OUTPUT_DIR>
 
-The documentation is available in ``onie/build/docs/html``.
-
+The documentation is available in ``<OUTPUT_DIR>/html``.  The default
+output directory is ``onie/build/docs/html``.
