docs: add publishing script and instructions
Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/README
+++ b/README
@@ -16,10 +16,21 @@ system::
 Building Documentation
 ======================
 
-To build the documentation do the following::
+To build the documentation, do the following::
 
   $ cd onie
-  $ make docs DOCBUILDDIR=<OUTPUT_DIR>
+  $ make docs [ DOCBUILDDIR=<OUTPUT_DIR> ]
 
 The documentation is available in ``<OUTPUT_DIR>/html``.  The default
 output directory is ``onie/build/docs/html``.
+
+Publishing Documentation
+========================
+
+To publish the documentation to the github website, do the following::
+
+  $ cd onie
+  $ make publish [ DOCBUILDDIR=<OUTPUT_DIR> ]
+
+Before the final push to the public website, the system asks for your
+confirmation regarding the changes you are about to publish.
