Juniper QFX5210-64C-S  Add support for building the 'demo' target.
 Add the build instructions for the 'demo' target into
  the INSTALL file.

 Define the ONIE version tag to a fixed string,
  because:
  The size of the eeprom in the Juniper QFX5210 platform is 256 bytes.
  It's almost preoccupied with the platform specific data.
  There is not much space left for the big version string
   added by ONIE.
  This also defines a fixed length version tag for the qfx5210.

Signed-off-by: Balasubramanyam A <balasubramaa@juniper.net>
Signed-off-by: Ciju Rajan K <crajank@juniper.net>
Signed-off-by: Alex Doyle <adoyle@cumulusnetworks.com>

--- a/machine/juniper/juniper_qfx5210/INSTALL
+++ b/machine/juniper/juniper_qfx5210/INSTALL
@@ -39,10 +39,21 @@ installing/recovery ONIE.
 onie-recovery-x86_64-juniper_qfx5210-r0.efi64.pxe -- This is a recovery PXE 
 image. This image can be used to installing ONIE using PXE Network install.
 
+Demo target can be built using the command
+
+  $ make -j4 MACHINEROOT=../machine/juniper MACHINE=juniper_qfx5210 all demo
+
+Then two more bin files are created in addition to the above listed
+
+-rw-rw---- 1 build build 12576008 Aug 19 16:30 demo-installer-x86_64-juniper_qfx5210-r0.bin
+-rw-rw---- 1 build build 12576008 Aug 19 16:30 demo-diag-installer-x86_64-juniper_qfx5210-r0.bin
+
+These files can be installed by 'onie-nos-install' command to test the installation / boot 
+workflow.
+
 For make clean, use the following command
 
 make machine-clean MACHINEROOT=../machine/juniper MACHINE=juniper_qfx5210
-
 
 
 Installing ONIE on a Blank Machine
