--- a/machine/stordis/stordis_bf2556x_1t/INSTALL
+++ b/machine/stordis/stordis_bf2556x_1t/INSTALL
@@ -23,10 +23,10 @@ Cross-Compiling the DEMO OS
 ===========================
 
 To compile the demo OS first change directories to ``build-config``
-and then type ``"make MACHINEROOT=../machine/stordis MACHINE=stordis_bf2556x_1t all"``.  For example::
+and then type ``"make MACHINEROOT=../machine/stordis MACHINE=stordis_bf2556x_1t demo"``.  For example::
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/stordis MACHINE=stordis_bf2556x_1t all
+  $ make -j4 MACHINEROOT=../machine/stordis MACHINE=stordis_bf2556x_1t demo
 
 When complete, the demo OS installer is located in ``build/images``::
 
