Use generic names in instructions.

--- a/machine/stordis/stordis_bf6064x_t/INSTALL
+++ b/machine/stordis/stordis_bf6064x_t/INSTALL
@@ -14,10 +14,10 @@ type ``"make MACHINEROOT=../machine/stordis MACHINE=stordis_bf6064x_t all"``.  F
 When complete, the ONIE binaries are located in
 ``build/images``::
 
--rw-r--r-- 1 lsharma ncore  3360400 May 28 15:29 stordis_bf6064x_t-r0.vmlinuz
--rw-r--r-- 1 lsharma ncore  5504404 May 28 15:31 stordis_bf6064x_t-r0.initrd
--rw-r--r-- 1 lsharma ncore  8910711 May 28 15:31 onie-updater-x86_64-stordis_bf6064x_t-r0
--rw-r--r-- 1 lsharma ncore 20381696 May 28 15:32 onie-recovery-x86_64-stordis_bf6064x_t-r0.iso
+-rw-r--r-- 1 user_1 group_1  3360400 May 28 15:29 stordis_bf6064x_t-r0.vmlinuz
+-rw-r--r-- 1 user_1 group_1  5504404 May 28 15:31 stordis_bf6064x_t-r0.initrd
+-rw-r--r-- 1 user_1 group_1  8910711 May 28 15:31 onie-updater-x86_64-stordis_bf6064x_t-r0
+-rw-r--r-- 1 user_1 group_1 20381696 May 28 15:32 onie-recovery-x86_64-stordis_bf6064x_t-r0.iso
 
 Cross-Compiling the DEMO OS
 ===========================
