Pegatron common_bde: add platform to support ONIE
Add below model support into pegatron_common_bde:

1. Pegatron_fm_6256_bn_f:
   with Marvell Falcon 98CX8512 x1
   48x10GbE/25GbE SFP28 ports, and 8x40GbE/100GbE QSFP28 ports

The CPU is a Intel Broadwell-DE D1527

Other changeset added into this commit are:

- Supoort BIOS/UEFI bootcode
- Enhance main board detection
- Add I2C arbiter PCA9641 support

Signed-off-by: Wolf Lin <Wolf_Lin@pegatroncorp.com>
Signed-off-by: Max Lee <max_lee@pegatroncorp.com>
Signed-off-by: Alex Doyle <adoyle@cumulusnetworks.com>

--- a/machine/pegatron/pegatron_common_bde/INSTALL
+++ b/machine/pegatron/pegatron_common_bde/INSTALL
@@ -16,6 +16,9 @@ detection, please refer to ``rootconf/sysroot-lib-onie/gen-config-platform``
  - Pegatron_fb_6256_bn_b
    48x10GbE/25GbE SFP28 ports, and 8x40GbE/100GbE QSFP28 ports
 
+ - Pegatron_fm_6256_bn_f
+   48x10GbE/25GbE SFP28 ports, and 8x40GbE/100GbE QSFP28 ports
+
   Specification
 ===============
  - Modularized CPU board design
