Pegatron common_bde: add support for FN-8032-BN-F series.
Add below three models support into pegatron_common_bde:

1. Pegatron_fn_8032_bn_f:
   with Nephos Leo NP8579 x1
   32x400GbE QSFP-DD ports

2. Pegatron_fn_8032_ba_f:
   with Nephos Leo NP8579 x1
   32x400GbE QSFP-DD ports
   and Aspeed AT2500 BMC

3. Pegatron_fm_6256_ba_f:
   with Marvell Falcon 98CX8512 x1
   48x10GbE/25GbE SFP28 ports, and 8x40GbE/100GbE QSFP28 ports
   and ASpeed AT2500 BMC

The CPU is a Intel Broadwell-DE D1527

Other changeset added into this commit are:

- Supoort IPMI

Signed-off-by: Wolf Lin <Wolf_Lin@pegatroncorp.com>
Signed-off-by: Max Lee <max_lee@pegatroncorp.com>

--- a/machine/pegatron/pegatron_common_bde/INSTALL
+++ b/machine/pegatron/pegatron_common_bde/INSTALL
@@ -19,6 +19,16 @@ detection, please refer to ``rootconf/sysroot-lib-onie/gen-config-platform``
  - Pegatron_fm_6256_bn_f
    48x10GbE/25GbE SFP28 ports, and 8x40GbE/100GbE QSFP28 ports
 
+ - Pegatron_fm_6256_ba_f
+   48x10GbE/25GbE SFP28 ports, and 8x40GbE/100GbE QSFP28 ports
+   with BMC
+
+ - Pegatron_fn_8032_bn_f
+   32x400GbE QSFP-DD ports
+   
+ - Pegatron_fn_8032_ba_f
+   32x400GbE QSFP-DD ports with BMC
+
   Specification
 ===============
  - Modularized CPU board design
