silicom_madrid: Add 'demo' OS target
Adding a target to build the 'demo' OS installer.

Signed-off-by: Tiago Brusamarello <tbrusa@gmail.com>

--- a/machine/silicom/silicom_madrid/INSTALL
+++ b/machine/silicom/silicom_madrid/INSTALL
@@ -27,6 +27,19 @@ image.  This image is a self-extracting archive used for installing ONIE.
 
 * silicom_madrid-r0.vmlinuz -- This is the ONIE initramfs (filesystem)
 
+Cross-Compiling the DEMO OS
+===========================
+
+To compile the demo OS first change directories to ``build-config``
+and then type ``"make MACHINEROOT=../machine/silicom MACHINE=silicom_madrid demo"``.  For example::
+
+  $ cd build-config
+  $ make -j4 MACHINEROOT=../machine/silicom MACHINE=silicom_madrd demo
+
+When complete, the demo OS installer is located in ``build/images``::
+
+  -rw-r--r-- 10364168 Feb 12 08:57 demo-installer-x86_64-silicom_madrid-r0.bin
+
 Installing ONIE on a Blank Machine
 ==================================
 
