--- a/machine/pegatron/pegatron_common_bde/INSTALL
+++ b/machine/pegatron/pegatron_common_bde/INSTALL
@@ -10,23 +10,23 @@ detection, please refer to ``rootconf/sysroot-lib-onie/gen-config-platform``
 
   Supported Platforms
 =======================
- - Pegatron_fb_6032_bn_f
+ - Pegatron_fb6032_bnf
    32x40GbE/100GbE QSFP28 ports
 
- - Pegatron_fb_6256_bn_b
+ - Pegatron_fb6256_bnb
    48x10GbE/25GbE SFP28 ports, and 8x40GbE/100GbE QSFP28 ports
 
- - Pegatron_fm_6256_bn_f
+ - Pegatron_fm6256_bnf
    48x10GbE/25GbE SFP28 ports, and 8x40GbE/100GbE QSFP28 ports
 
- - Pegatron_fm_6256_ba_f
+ - Pegatron_fm6256_baf
    48x10GbE/25GbE SFP28 ports, and 8x40GbE/100GbE QSFP28 ports
    with BMC
 
- - Pegatron_fn_8032_bn_f
+ - Pegatron_fn8032_bnf
    32x400GbE QSFP-DD ports
    
- - Pegatron_fn_8032_ba_f
+ - Pegatron_fn8032_baf
    32x400GbE QSFP-DD ports with BMC
 
   Specification
