Pegatron common_bde: add DM6209-7 platform to support ONIE.
Add below model support into pegatron_common_bde:

1. Pegatron_dm6209_7:
   with Marvell Falcon 98DX8515 x1
   1x100GbE QSFP28 port, 1xSFP+ port
   and 8x25GbE SFP28 ports.

The CPU is a Intel Broadwell-DE D1527

Signed-off-by: Wolf Lin <Wolf_Lin@pegatroncorp.com>

--- a/machine/pegatron/pegatron_common_bde/INSTALL
+++ b/machine/pegatron/pegatron_common_bde/INSTALL
@@ -29,6 +29,10 @@ detection, please refer to ``rootconf/sysroot-lib-onie/gen-config-platform``
  - Pegatron_fn8032_baf
    32x400GbE QSFP-DD ports with BMC
 
+ - Pegatron_dm6209_7
+   1x100GbE QSFP28 port, 1xSFP+ port and
+   eight 25GbE SFP28 (port 1-6: eCPRI/CPRI, port 7-8 eCPRI)
+
   Specification
 ===============
  - Modularized CPU board design
