--- a/machine/alphanetworks/alphanetworks_snj61d0_320f/INSTALL
+++ b/machine/alphanetworks/alphanetworks_snj61d0_320f/INSTALL
@@ -2,25 +2,25 @@
 Installing ONIE on Alpha_Networks SNJ61D0-320F
 ==============================================
 
-Cross-Compiling ONIE
-====================
+Cross-Compiling r0 ONIE
+=======================
 
 Change directories to ``build-config`` to compile ONIE.
 
 To compile ONIE first change directories to ``build-config`` and then
-type ``"make MACHINEROOT=../machine/alphanetworks  MACHINE=alphanetworks_snj61d0_320f all"``.
+type ``"make MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f VENDOR_REV=0 all"``.
 For example:
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/alphanetworks  MACHINE=alphanetworks_snj61d0_320f all
+  $ make -j4 MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f VENDOR_REV=0 all
 
 When complete, the ONIE binaries are located in
 ``build/images``:
 
--rw-r--r-- 1 5986340 Aug 10 15:28 alphanetworks_snj61d0_320f-r0.initrd
--rw-r--r-- 1 3091952 Aug 10 15:13 alphanetworks_snj61d0_320f-r0.vmlinuz
--rw-r--r-- 1 20774912 Aug 10 15:14 onie-recovery-x86_64-alphanetworks_snj61d0_320f-r0.iso
--rw-r--r-- 1 9135991 Aug 10 15:14 onie-updater-x86_64-alphanetworks_snj61d0_320f-r0
+-rw-r--r-- 1 build build 10553808 Dec 21 01:03 alphanetworks_snj61d0_320f-r0.initrd
+-rw-r--r-- 1 build build  3780688 Dec 21 01:06 alphanetworks_snj61d0_320f-r0.vmlinuz
+-rw-r--r-- 1 build build 32571392 Dec 21 01:06 onie-recovery-x86_64-alphanetworks_snj61d0_320f-r0.iso
+-rw-r--r-- 1 build build 14297082 Dec 21 01:06 onie-updater-x86_64-alphanetworks_snj61d0_320f-r0
 
 alphanetworks_snj61d0_320f-r0.vmlinuz -- This is the ONIE kernel image
 
@@ -33,6 +33,68 @@ onie-recovery-x86_64-alphanetworks_snj61d0_320f-r0.iso -- This is a recovery ISO
 image. This image can be used to create a bootable USB memory stick for 
 installing/recovery ONIE.
 
+Cross-Compiling r1 ONIE
+=======================
+
+Change directories to ``build-config`` to compile ONIE.
+
+To compile ONIE first change directories to ``build-config`` and then
+type ``"make MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f VENDOR_REV=1 all"``.
+For example:
+
+  $ cd build-config
+  $ make -j4 MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f VENDOR_REV=1 all
+
+When complete, the ONIE binaries are located in
+``build/images``:
+
+-rw-r--r-- 1 build build 10554564 Dec 21 00:54 alphanetworks_snj61d0_320f-r1.initrd
+-rw-r--r-- 1 build build  3780688 Dec 21 00:58 alphanetworks_snj61d0_320f-r1.vmlinuz
+-rw-r--r-- 1 build build 32571392 Dec 21 00:58 onie-recovery-x86_64-alphanetworks_snj61d0_320f-r1.iso
+-rw-r--r-- 1 build build 14297082 Dec 21 00:58 onie-updater-x86_64-alphanetworks_snj61d0_320f-r1
+
+alphanetworks_snj61d0_320f-r1.vmlinuz -- This is the ONIE kernel image
+
+alphanetworks_snj61d0_320f-r1.initrd  -- This is the ONIE initramfs (filesystem)
+
+onie-updater-x86_64-alphanetworks_snj61d0_320f-r1 -- This is the ONIE self-update
+image.  This image is a self-extracting archive used for installing ONIE.
+
+onie-recovery-x86_64-alphanetworks_snj61d0_320f-r1.iso -- This is a recovery ISO 
+image. This image can be used to create a bootable USB memory stick for 
+installing/recovery ONIE.
+
+Cross-Compiling r2 ONIE
+=======================
+
+Change directories to ``build-config`` to compile ONIE.
+
+To compile ONIE first change directories to ``build-config`` and then
+type ``"make MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f all"``.
+For example:
+
+  $ cd build-config
+  $ make -j4 MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f all
+
+When complete, the ONIE binaries are located in
+``build/images``:
+
+-rw-r--r-- 1 build build 10555556 Dec 21 02:43 alphanetworks_snj61d0_320f-r2.initrd
+-rw-r--r-- 1 build build  3780688 Dec 21 02:46 alphanetworks_snj61d0_320f-r2.vmlinuz
+-rw-r--r-- 1 build build 32571392 Dec 21 02:47 onie-recovery-x86_64-alphanetworks_snj61d0_320f-r2.iso
+-rw-r--r-- 1 build build 14297082 Dec 21 02:46 onie-updater-x86_64-alphanetworks_snj61d0_320f-r2
+
+alphanetworks_snj61d0_320f-r2.vmlinuz -- This is the ONIE kernel image
+
+alphanetworks_snj61d0_320f-r2.initrd  -- This is the ONIE initramfs (filesystem)
+
+onie-updater-x86_64-alphanetworks_snj61d0_320f-r2 -- This is the ONIE self-update
+image.  This image is a self-extracting archive used for installing ONIE.
+
+onie-recovery-x86_64-alphanetworks_snj61d0_320f-r2.iso -- This is a recovery ISO 
+image. This image can be used to create a bootable USB memory stick for 
+installing/recovery ONIE.
+
 Installing ONIE on a Blank Machine
 ==================================
 
@@ -42,12 +104,12 @@ create a bootable USB memory stick.
 Creating bootable USB stick
 ---------------------------
 
-Use ``dd`` to copy the .iso image to a USB stick and boot from that::
+Use ``dd`` to copy the .iso image to a USB stick and boot from that:
 
   dd if=<machine>.iso of=/dev/sdX bs=10M
 
-For example::
-  dd if=onie-recovery-x86_64-alphanetworks_snj61d0_320f-r0.iso of=/dev/sdb bs=10M
+For example:
+  dd if=onie-recovery-x86_64-alphanetworks_snj61d0_320f-r2.iso of=/dev/sdb bs=10M
 
 You can find the correct ``/dev/sdX`` by inspecing the ``dmesg``
 output after inserting the USB stick into your work station.
@@ -66,26 +128,27 @@ To enable booting from USB in the BIOS:
   In "Boot Option #1" select the device that corresponds to your
   device:
 
-    Boot-->FIXED BOOT ORDER Priorities-->Boot Option #1
+    Boot-->Boot Option Priorities-->Boot Option #1
 
   If the device name is not listed in "Boot Option #1", please
-  check the priorities in the FIXED BOOT ORDER Priorities.
+  check the priorities in the hard drive boot order:
 
-    Boot-->FIXED BOOT ORDER Priorities-->Boot Option #1
+    Boot-->Hard Drive BBS Priorities-->Boot Option #1
 
   Taking ``JetFlashTranscend 8GB 8.07`` as an example, the boot
   order will look like following:
 
-    FIXED BOOT ORDER Priorities
+    Boot Option Priorities
     Boot Option #1          [JetFlashTranscend 8...]
-    Boot Option #2          [UEFI: Built-in EFI ...]
-    Boot Option #3          [UEFI Network]
+    Boot Option #2          [ATP ATP IG eUSB 1100]
+    Boot Option #3          [IBA GE Slot 00A0 v1543]
+    Boot Option #4          [UEFI: Built-in EFI ...]
 
 4. Save and Exit the BIOS configuration
 
 5. After several seconds, you should see:
 
-                             GNU GRUB  version 2.02
+                             GNU GRUB  version 2.04
 
  +----------------------------------------------------------------------------+
  |*ONIE: Rescue                                                               |
