Pegatron common_bde: add two platforms to support ONIE.
Add below model support into pegatron_common_bde:

1. Pegatron_fn8656_bnf:
   with Nephos Leo NP8579 x1
   48x50GbE/100GbE DSFP ports and 8x400GbE QSFP-DD ports

2. Pegatron_fn8032_bnf-r1
   with Nephos Leo NP8579 x1
   32x400GbE QSFP-DD ports

The CPU is a Intel Broadwell-DE D1627

Signed-off-by: Wolf Lin <Wolf_Lin@pegatroncorp.com>

--- a/machine/pegatron/pegatron_common_bde/INSTALL
+++ b/machine/pegatron/pegatron_common_bde/INSTALL
@@ -33,6 +33,9 @@ detection, please refer to ``rootconf/sysroot-lib-onie/gen-config-platform``
    1x100GbE QSFP28 port, 1xSFP+ port and
    eight 25GbE SFP28 (port 1-6: eCPRI/CPRI, port 7-8 eCPRI)
 
+ - Pegatron_fn8656_bnf
+   48x50GbE/100GbE DSFP ports, 8x400GbE QSFP-DD ports
+
   Specification
 ===============
  - Modularized CPU board design
