--- a/machine/alphanetworks/alphanetworks_spx70d0_082f/INSTALL
+++ b/machine/alphanetworks/alphanetworks_spx70d0_082f/INSTALL
@@ -1,5 +1,5 @@
 ==============================================
-Installing ONIE on Alpha_Networks SPX60D0_082F
+Installing ONIE on Alpha_Networks SPX70D0_082F
 ==============================================
 
 Cross-Compiling ONIE
@@ -8,28 +8,28 @@ Cross-Compiling ONIE
 Change directories to ``build-config`` to compile ONIE.
 
 To compile ONIE first change directories to ``build-config`` and then
-type ``"make MACHINEROOT=../machine/alphanetworks  MACHINE=alphanetworks_spx60d0_082f all"``.
-For example::
+type ``"make MACHINEROOT=../machine/alphanetworks  MACHINE=alphanetworks_spx70d0_082f all"``.
+For example:
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/alphanetworks  MACHINE=alphanetworks_spx60d0_082f all
+  $ make -j4 MACHINEROOT=../machine/alphanetworks  MACHINE=alphanetworks_spx70d0_082f all
 
 When complete, the ONIE binaries are located in
-``build/images``::
+``build/images``:
 
--rw-r--r-- 1 5986340 Aug 10 15:28 alphanetworks_spx60d0_082f-r0.initrd
--rw-r--r-- 1 3091952 Aug 10 15:13 alphanetworks_spx60d0_082f-r0.vmlinuz
--rw-r--r-- 1 20774912 Aug 10 15:14 onie-recovery-x86_64-alphanetworks_spx60d0_082f-r0.iso
--rw-r--r-- 1 9135991 Aug 10 15:14 onie-updater-x86_64-alphanetworks_spx60d0_082f-r0
+-rw-r--r-- 1 10782248 Dec 30 03:08 alphanetworks_spx70d0_082f-r0.initrd
+-rw-r--r-- 1  3801168 Dec 30 03:06 alphanetworks_spx70d0_082f-r0.vmlinuz
+-rw-r--r-- 1 33030144 Dec 30 03:09 onie-recovery-x86_64-alphanetworks_spx70d0_082f-r0.iso
+-rw-r--r-- 1 14553082 Dec 30 03:08 onie-updater-x86_64-alphanetworks_spx70d0_082f-r0
 
-alphanetworks_spx60d0_082f-r0.vmlinuz -- This is the ONIE kernel image
+alphanetworks_spx70d0_082f-r0.vmlinuz -- This is the ONIE kernel image
 
-alphanetworks_spx60d0_082f-r0.initrd  -- This is the ONIE initramfs (filesystem)
+alphanetworks_spx70d0_082f-r0.initrd  -- This is the ONIE initramfs (filesystem)
 
-onie-updater-x86_64-alphanetworks_spx60d0_082f-r0 -- This is the ONIE self-update
+onie-updater-x86_64-alphanetworks_spx70d0_082f-r0 -- This is the ONIE self-update
 image.  This image is a self-extracting archive used for installing ONIE.
 
-onie-recovery-x86_64-alphanetworks_spx60d0_082f-r0.iso -- This is a recovery ISO 
+onie-recovery-x86_64-alphanetworks_spx70d0_082f-r0.iso -- This is a recovery ISO 
 image. This image can be used to create a bootable USB memory stick for 
 installing/recovery ONIE.
 
@@ -42,12 +42,12 @@ create a bootable USB memory stick.
 Creating bootable USB stick
 ---------------------------
 
-Use ``dd`` to copy the .iso image to a USB stick and boot from that::
+Use ``dd`` to copy the .iso image to a USB stick and boot from that:
 
   dd if=<machine>.iso of=/dev/sdX bs=10M
 
-For example::
-  dd if=onie-recovery-x86_64-alphanetworks_spx60d0_082f-r0.iso of=/dev/sdb bs=10M
+For example:
+  dd if=onie-recovery-x86_64-alphanetworks_spx70d0_082f-r0.iso of=/dev/sdb bs=10M
 
 You can find the correct ``/dev/sdX`` by inspecing the ``dmesg``
 output after inserting the USB stick into your work station.
@@ -64,17 +64,17 @@ To enable booting from USB in the BIOS:
 3. Set the hard drive boot order:
 
   In "Boot Option #1" select the device that corresponds to your
-  device::
+  device:
 
     Boot-->Boot Option Priorities-->Boot Option #1
 
   If the device name is not listed in "Boot Option #1", please
-  check the priorities in the hard drive boot order::
+  check the priorities in the hard drive boot order:
 
     Boot-->Hard Drive BBS Priorities-->Boot Option #1
 
   Taking ``JetFlashTranscend 8GB 8.07`` as an example, the boot
-  order will look like following::
+  order will look like following:
 
     Boot Option Priorities
     Boot Option #1          [JetFlashTranscend 8...]
