--- a/machine/alphanetworks/alphanetworks_scg60d0_484t/INSTALL
+++ b/machine/alphanetworks/alphanetworks_scg60d0_484t/INSTALL
@@ -2,25 +2,25 @@
 Installing ONIE on Alpha_Networks SCG60D0_484T
 ==============================================
 
-Cross-Compiling ONIE
-====================
+Cross-Compiling r0 ONIE
+=======================
 
 Change directories to ``build-config`` to compile ONIE.
 
 To compile ONIE first change directories to ``build-config`` and then
-type ``"make MACHINEROOT=../machine/alphanetworks  MACHINE=alphanetworks_scg60d0_484t all"``.
-For example::
+type ``"make MACHINEROOT=../machine/alphanetworks  MACHINE=alphanetworks_scg60d0_484t VENDOR_REV=0 all"``.
+For example:
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/alphanetworks  MACHINE=alphanetworks_scg60d0_484t all
+  $ make -j4 MACHINEROOT=../machine/alphanetworks  MACHINE=alphanetworks_scg60d0_484t VENDOR_REV=0 all
 
 When complete, the ONIE binaries are located in
-``build/images``::
+``build/images``:
 
--rw-r--r-- 1 5986340 Aug 10 15:28 alphanetworks_scg60d0_484t-r0.initrd
--rw-r--r-- 1 3091952 Aug 10 15:13 alphanetworks_scg60d0_484t-r0.vmlinuz
--rw-r--r-- 1 20774912 Aug 10 15:14 onie-recovery-x86_64-alphanetworks_scg60d0_484t-r0.iso
--rw-r--r-- 1 9135991 Aug 10 15:14 onie-updater-x86_64-alphanetworks_scg60d0_484t-r0
+-rw-r--r-- 1 10829736 Jan 28 02:35 alphanetworks_scg60d0_484t-r0.initrd
+-rw-r--r-- 1  3801168 Jan 28 02:33 alphanetworks_scg60d0_484t-r0.vmlinuz
+-rw-r--r-- 1 33161216 Jan 28 02:36 onie-recovery-x86_64-alphanetworks_scg60d0_484t-r0.iso
+-rw-r--r-- 1 14594042 Jan 28 02:35 onie-updater-x86_64-alphanetworks_scg60d0_484t-r0
 
 alphanetworks_scg60d0_484t-r0.vmlinuz -- This is the ONIE kernel image
 
@@ -33,6 +33,37 @@ onie-recovery-x86_64-alphanetworks_scg60d0_484t-r0.iso -- This is a recovery ISO
 image. This image can be used to create a bootable USB memory stick for 
 installing/recovery ONIE.
 
+Cross-Compiling r1 ONIE
+=======================
+
+Change directories to ``build-config`` to compile ONIE.
+
+To compile ONIE first change directories to ``build-config`` and then
+type ``"make MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_scg60d0_484t all"``.
+For example:
+
+  $ cd build-config
+  $ make -j4 MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_scg60d0_484t all
+
+When complete, the ONIE binaries are located in
+``build/images``:
+
+-rw-r--r-- 1 10825056 Jan 28 02:57 alphanetworks_scg60d0_484t-r1.initrd
+-rw-r--r-- 1  3801168 Jan 28 02:41 alphanetworks_scg60d0_484t-r1.vmlinuz
+-rw-r--r-- 1 33161216 Jan 28 02:58 onie-recovery-x86_64-alphanetworks_scg60d0_484t-r1.iso
+-rw-r--r-- 1 14594042 Jan 28 02:57 onie-updater-x86_64-alphanetworks_scg60d0_484t-r1
+
+alphanetworks_scg60d0_484t-r1.vmlinuz -- This is the ONIE kernel image
+
+alphanetworks_scg60d0_484t-r1.initrd  -- This is the ONIE initramfs (filesystem)
+
+onie-updater-x86_64-alphanetworks_scg60d0_484t-r1 -- This is the ONIE self-update
+image.  This image is a self-extracting archive used for installing ONIE.
+
+onie-recovery-x86_64-alphanetworks_scg60d0_484t-r1.iso -- This is a recovery ISO 
+image. This image can be used to create a bootable USB memory stick for 
+installing/recovery ONIE.
+
 Installing ONIE on a Blank Machine
 ==================================
 
@@ -42,12 +73,12 @@ create a bootable USB memory stick.
 Creating bootable USB stick
 ---------------------------
 
-Use ``dd`` to copy the .iso image to a USB stick and boot from that::
+Use ``dd`` to copy the .iso image to a USB stick and boot from that:
 
   dd if=<machine>.iso of=/dev/sdX bs=10M
 
-For example::
-  dd if=onie-recovery-x86_64-alphanetworks_scg60d0_484t-r0.iso of=/dev/sdb bs=10M
+For example:
+  dd if=onie-recovery-x86_64-alphanetworks_scg60d0_484t-r1.iso of=/dev/sdb bs=10M
 
 You can find the correct ``/dev/sdX`` by inspecing the ``dmesg``
 output after inserting the USB stick into your work station.
@@ -64,17 +95,17 @@ To enable booting from USB in the BIOS:
 3. Set the hard drive boot order:
 
   In "Boot Option #1" select the device that corresponds to your
-  device::
+  device:
 
     Boot-->Boot Option Priorities-->Boot Option #1
 
   If the device name is not listed in "Boot Option #1", please
-  check the priorities in the hard drive boot order::
+  check the priorities in the hard drive boot order:
 
     Boot-->Hard Drive BBS Priorities-->Boot Option #1
 
   Taking ``JetFlashTranscend 8GB 8.07`` as an example, the boot
-  order will look like following::
+  order will look like following:
 
     Boot Option Priorities
     Boot Option #1          [JetFlashTranscend 8...]
@@ -86,7 +117,7 @@ To enable booting from USB in the BIOS:
 
 5. After several seconds, you should see:
 
-                     GNU GRUB  version 2.02~beta2+e4a1fe391
+                     GNU GRUB  version 2.02
 
  +----------------------------------------------------------------------------+
  |*ONIE: Rescue                                                               |
