Modify Alpha Networks SPX70D0-168F due to internal design changes.
    1. Change default console to ttyS1.
    2. Change ONIE EEPROM I2C bus and address.

Signed-off-by: SeanTai-ALPHA <Sean_Tai@alphanetworks.com>

--- a/machine/alphanetworks/alphanetworks_spx70d0_168f/INSTALL
+++ b/machine/alphanetworks/alphanetworks_spx70d0_168f/INSTALL
@@ -17,10 +17,10 @@ For example:
 When complete, the ONIE binaries are located in
 ``build/images``:
 
--rw-r--r-- 1 5986340 Aug 10 15:28 alphanetworks_spx70d0_168f-r0.initrd
--rw-r--r-- 1 3091952 Aug 10 15:13 alphanetworks_spx70d0_168f-r0.vmlinuz
--rw-r--r-- 1 20774912 Aug 10 15:14 onie-recovery-x86_64-alphanetworks_spx70d0_168f-r0.iso
--rw-r--r-- 1 9135991 Aug 10 15:14 onie-updater-x86_64-alphanetworks_spx70d0_168f-r0
+-rw-r--r--  1 10827776 Mar 28 09:00 alphanetworks_spx70d0_168f-r0.initrd
+-rw-r--r--  1  3801168 Mar 28 08:22 alphanetworks_spx70d0_168f-r0.vmlinuz
+-rw-r--r--  1 33161216 Mar 28 09:00 onie-recovery-x86_64-alphanetworks_spx70d0_168f-r0.iso
+-rw-r--r--  1 14594042 Mar 28 09:00 onie-updater-x86_64-alphanetworks_spx70d0_168f-r0
 
 alphanetworks_spx70d0_168f-r0.vmlinuz -- This is the ONIE kernel image
 
@@ -42,11 +42,11 @@ create a bootable USB memory stick.
 Creating bootable USB stick
 ---------------------------
 
-Use ``dd`` to copy the .iso image to a USB stick and boot from that::
+Use ``dd`` to copy the .iso image to a USB stick and boot from that:
 
   dd if=<machine>.iso of=/dev/sdX bs=10M
 
-For example::
+For example:
   dd if=onie-recovery-x86_64-alphanetworks_spx70d0_168f-r0.iso of=/dev/sdb bs=10M
 
 You can find the correct ``/dev/sdX`` by inspecing the ``dmesg``
@@ -86,7 +86,7 @@ To enable booting from USB in the BIOS:
 
 5. After several seconds, you should see:
 
-                     GNU GRUB  version 2.02~beta2+e4a1fe391
+                     GNU GRUB  version 2.04
 
  +----------------------------------------------------------------------------+
  |*ONIE: Rescue                                                               |
