Add Alpha Networks SNJ-61D0-320F platforms and add README
    Add support for x86_64-alphanetworks_snj61d0_320f-r3 platform.

Signed-off-by: SeanTai-ALPHA <Sean_Tai@alphanetworks.com>
Signed-off-by: Alex Doyle <alexddoyle@gmail.com>

--- a/machine/alphanetworks/alphanetworks_snj61d0_320f/INSTALL
+++ b/machine/alphanetworks/alphanetworks_snj61d0_320f/INSTALL
@@ -70,11 +70,11 @@ Cross-Compiling r2 ONIE
 Change directories to ``build-config`` to compile ONIE.
 
 To compile ONIE first change directories to ``build-config`` and then
-type ``"make MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f all"``.
+type ``"make MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f VENDOR_REV=2 all"``.
 For example:
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f all
+  $ make -j4 MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f VENDOR_REV=2 all
 
 When complete, the ONIE binaries are located in
 ``build/images``:
@@ -92,6 +92,37 @@ onie-updater-x86_64-alphanetworks_snj61d0_320f-r2 -- This is the ONIE self-updat
 image.  This image is a self-extracting archive used for installing ONIE.
 
 onie-recovery-x86_64-alphanetworks_snj61d0_320f-r2.iso -- This is a recovery ISO 
+image. This image can be used to create a bootable USB memory stick for 
+installing/recovery ONIE.
+
+Cross-Compiling r3 ONIE
+=======================
+
+Change directories to ``build-config`` to compile ONIE.
+
+To compile ONIE first change directories to ``build-config`` and then
+type ``"make MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f all"``.
+For example:
+
+  $ cd build-config
+  $ make -j4 MACHINEROOT=../machine/alphanetworks MACHINE=alphanetworks_snj61d0_320f all
+
+When complete, the ONIE binaries are located in
+``build/images``:
+
+-rw-r--r--  1 10604496 Jul  8 00:41 alphanetworks_snj61d0_320f-r3.initrd
+-rw-r--r--  1  3780688 Jul  8 00:44 alphanetworks_snj61d0_320f-r3.vmlinuz
+-rw-r--r--  1 32636928 Jul  8 00:44 onie-recovery-x86_64-alphanetworks_snj61d0_320f-r3.iso
+-rw-r--r--  1 14348282 Jul  8 00:44 onie-updater-x86_64-alphanetworks_snj61d0_320f-r3
+
+alphanetworks_snj61d0_320f-r3.vmlinuz -- This is the ONIE kernel image
+
+alphanetworks_snj61d0_320f-r3.initrd  -- This is the ONIE initramfs (filesystem)
+
+onie-updater-x86_64-alphanetworks_snj61d0_320f-r3 -- This is the ONIE self-update
+image.  This image is a self-extracting archive used for installing ONIE.
+
+onie-recovery-x86_64-alphanetworks_snj61d0_320f-r3.iso -- This is a recovery ISO 
 image. This image can be used to create a bootable USB memory stick for 
 installing/recovery ONIE.
 
