Accton AS4630: single image for 54PE, 54TE, 54NPE, and 54NPEM
Signed-off-by: david_yang <david_yang@edge-core.com>
Signed-off-by: Michael Shych <michaelsh@nvidia.com>

--- a/machine/accton/accton_as4630/INSTALL
+++ b/machine/accton/accton_as4630/INSTALL
@@ -1,6 +1,6 @@
-=====================================
-Installing ONIE on Accton AS4630_54PE
-=====================================
+================================
+Installing ONIE on Accton AS4630
+================================
 
 Cross-Compiling ONIE
 ====================
@@ -8,29 +8,29 @@ Cross-Compiling ONIE
 Change directories to ``build-config`` to compile ONIE.
 
 To compile ONIE first change directories to ``build-config`` and then
-type ``"make MACHINEROOT=../machine/accton MACHINE=accton_as4630_54pe all"``.
+type ``"make MACHINEROOT=../machine/accton MACHINE=accton_as4630 all"``.
 For example::
 
   $ cd build-config
-  $ make -j4 MACHINEROOT=../machine/accton MACHINE=accton_as4630_54pe all
+  $ make -j4 MACHINEROOT=../machine/accton MACHINE=accton_as4630 all
 
 When complete, the ONIE binaries are located in
 ``build/images``::
 
--rw-rw-r-- 1  8217496 Sep 17 14:24 accton_as4630_54pe-r0.initrd
--rw-rw-r-- 1  3445024 Sep 17 14:23 accton_as4630_54pe-r0.vmlinuz
--rw-rw-r-- 1 25952256 Sep 17 14:25 onie-recovery-x86_64-accton_as4630_54pe-r0.iso
--rw-rw-r-- 1 11695991 Sep 17 14:24 onie-updater-x86_64-accton_as4630_54pe-r0
+-rw-rw-r-- 1  8217496 Sep 17 14:24 accton_as4630-r0.initrd
+-rw-rw-r-- 1  3445024 Sep 17 14:23 accton_as4630-r0.vmlinuz
+-rw-rw-r-- 1 25952256 Sep 17 14:25 onie-recovery-x86_64-accton_as4630-r0.iso
+-rw-rw-r-- 1 11695991 Sep 17 14:24 onie-updater-x86_64-accton_as4630-r0
 
-accton_as4630_54pe-r0.vmlinuz -- This is the ONIE kernel image
+accton_as4630-r0.vmlinuz -- This is the ONIE kernel image
 
-accton_as4630_54pe-r0.initrd  -- This is the ONIE initramfs (filesystem)
+accton_as4630-r0.initrd  -- This is the ONIE initramfs (filesystem)
 
-onie-recovery-x86_64-accton_as4630_54pe-r0.iso -- This is the ONIE recovery
+onie-recovery-x86_64-accton_as4630-r0.iso -- This is the ONIE recovery
 ISO image.  This image can be used to create a bootable USB memory stick
 for installing/recovery ONIE.
 
-onie-updater-x86_64-accton_as4630_54pe-r0 -- This is the ONIE self-update
+onie-updater-x86_64-accton_as4630-r0 -- This is the ONIE self-update
 image.  This image is a self-extracting archive used for installing ONIE.
 
 Installing ONIE on a Blank Machine
