delta_ipdh4: clean code and modify information
Signed-off-by: Joe.zy.chen <JOE.ZY.CHEN@deltaww.com>

--- a/machine/delta/delta_ipdh4/INSTALL
+++ b/machine/delta/delta_ipdh4/INSTALL
@@ -1,5 +1,5 @@
 ================================================================================
-Installing ONIE on NOKIA IXR7220_H3 w/ Intel Atom Denverton (C3538) CPU Module
+Installing ONIE on IPDH4 w/ Intel Ice Lake LCC (D-1714) CPU Module
 ================================================================================
 
 Cross-Compiling ONIE
